# hydroshift

./: .Rprofile  .dockerignore  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.deploy.yml  docker-compose.yml  pyproject.toml  requirements.r  requirements.txt  setup.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-build.yaml  get-version.yaml  main-push.yaml  pr-chaeck.yaml  pr-check.yaml
code/: app.py  data_retrieval.py
hydroshift/: Home.py  add_analytics.py  app.py  app_logging.py  consts.py  data_retrieval.py  errors.py  logging.py  plots.py  session.py  streamlit_app.py
hydroshift/_pages/: __init__.py  changepoint.py  homepage.py  summary.py
hydroshift/pages/: Gage_Summary.py  changepoint.py  gage_summary.py  summary_page.py
hydroshift/rserver/: __init__.py  start_r_server.py
hydroshift/stats/: __init__.py
hydroshift/templates/: app_description.md  changepoint_description.md  changepoint_ffa.md  changepoint_references.md  changepoint_summary_1.md  changepoint_summary_2.md  data_sources_side_bar.html  footer.html  site_summary.md
hydroshift/text/: changepoint.py
hydroshift/utils/: changepoint.py  common.py  data_models.py  data_retrieval.py  ffa.py  jinja.py  plots.py
scripts/: logo.py
templates/: changepoint_description.md
tests/stat_tests/: changepoint_test.py
tst/: app.py  consts.py  data_retrieval.py  errors.py  plots.py  server.r  start_r_server.py  start_server.r
tst/pages/: changepoint.py
tst/rserver/: start_r_server.py
tst/stats/: tests.py
tst/text/: __init__.py  changepoint.py
