[project]
name = "hydroshift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dataretrieval==1.0.11",
    "folium==0.19.4",
    "friendlywords>=1.2.0",
    "jinja2>=3.1.6",
    "kaleido==0.2.0",
    "leafmap>=0.43.1",
    "matplotlib>=3.10.1",
    "pandas==2.2.3",
    "plotly==6.0.0",
    "psutil>=7.0.0",
    "python-docx>=1.1.2",
    "radian>=0.6.13",
    "rasterio>=1.4.3",
    "scipy==1.15.2",
    "streamlit==1.49.0",
    "streamlit-cookies-manager>=0.2.0",
    "streamlit-folium==0.24.0",
]

[tool.setuptools.packages.find]
include = ["hydroshift*"]
namespaces = false

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F401", "I001"]  # unused imports + import sorting

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
